--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,10 +6,12 @@ pool:
 
 steps:
 - task: TerraformInstaller@1
+  displayName: 'Terraform Installation'
   inputs:
     terraformVersion: 'latest'
 
 - task: TerraformTaskV4@4
+  displayName: 'Terraform Init'
   inputs:
     provider: 'azurerm'
     command: 'init'
@@ -20,12 +22,14 @@ steps:
     backendAzureRmKey: 'terraform.tfstate'
 
 - task: TerraformTaskV4@4
+  displayName: 'Terraform Plan'
   inputs:
     provider: 'azurerm'
     command: 'plan'
     environmentServiceNameAzureRM: 'az-terraform' 
 
 - task: TerraformTaskV4@4
+  displayName: 'Terraform Apply'
   inputs:
     provider: 'azurerm'
     command: 'apply'
